# monorepo

./: .cursorignore  .dockerignore  .editorconfig  .env.dev.example  .env.example  .env.prod.example  .eslintignore  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .oxfmtrc.jsonc  .oxlintrc.json  .prettierignore  .tokeignore  AGENTS.md  README.md  TODO.md  biome.json  biome.jsonc  commitlint.config.cjs  commitlint.config.ts  compose.dev-override.yaml  compose.prod-override.yaml  compose.yaml  justfile  knip.json  lefthook.yml  lint-staged.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml  turbo.json  typescript_migration_status.md  wrangler.toml
_migrate/atl-chat/: .cursorignore  .dockerignore  .env.dev.example  .env.example  .gitignore  .gitmodules  .luacheckrc  .markdownlint.yml  .pre-commit-config.yaml  .releaserc.json  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  commitlint.config.mjs  compose.yaml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
_migrate/atl-chat/.cursor/commands/: database-migration.md  update-agents-md.md
_migrate/atl-chat/.cursor/plans/: add_irc_message_flow_logging_f5031bd1.plan.md  agents.md_audit_plan_0e4a4132.plan.md  atl.chat_codebase_architecture_audit_a6482578.plan.md  bridge_codebase_architecture_audit_24b32b4a.plan.md  bridge_implementation_stages_b21ce01f.plan.md  bridge_qol_and_customization_ee5fe085.plan.md  custom_discord_irc_xmpp_bridge_0068eac0.plan.md  discord-ircv3_audit_implementation_d414f844.plan.md  flatten_apps_structure_0790d58e.plan.md  irc_puppets_and_reference_insights_2e3bda2d.plan.md  merge_bridge_into_monorepo_7a4502d5.plan.md  the_lounge_integration_3ba6e863.plan.md  xmpp_avatar_to_irc_c08f550c.plan.md
_migrate/atl-chat/.github/: renovate.json5
_migrate/atl-chat/.github/scripts/: docker.sh
_migrate/atl-chat/.github/workflows/: bridge-docker.yml  ci.yml  docker.yml  lint.yml  maintenance.yml  security.yml
_migrate/atl-chat/apps/atheme/: AGENTS.md  docker-entrypoint.sh  no-irc-register.patch
_migrate/atl-chat/apps/atheme/config/: atheme.conf.template
_migrate/atl-chat/apps/bridge/: AGENTS.md  Containerfile  README.md  config.template.yaml  justfile  pyproject.toml
_migrate/atl-chat/apps/bridge/src/: AGENTS.md
_migrate/atl-chat/apps/bridge/tests/: AGENTS.md  README.md  conftest.py  harness.py  mocks.py
_migrate/atl-chat/apps/docs/: AGENTS.md  alchemy.run.ts  next.config.mjs  package.json  source.config.ts  tsconfig.json
_migrate/atl-chat/apps/docs/lib/: layout.shared.tsx  source.ts
_migrate/atl-chat/apps/docs/scripts/: lint.ts
_migrate/atl-chat/apps/docs/types/: env.d.ts
_migrate/atl-chat/apps/fluux-messenger/: AGENTS.md  docker-entrypoint.sh  nginx-plain.conf.template  nginx-tls.conf.template
_migrate/atl-chat/apps/gamja/: AGENTS.md  Containerfile
_migrate/atl-chat/apps/obsidianirc/: AGENTS.md  Containerfile  README.md  justfile
_migrate/atl-chat/apps/prosody/: AGENTS.md  Containerfile  justfile  modules.list
_migrate/atl-chat/apps/thelounge/: AGENTS.md  config.js.template  justfile
_migrate/atl-chat/apps/unrealircd/: AGENTS.md  Containerfile  config.settings  third-party-modules.list
_migrate/atl-chat/apps/web/: .gitignore  AGENTS.md  next.config.mjs  package.json
_migrate/atl-chat/apps/webpanel/: AGENTS.md  Containerfile  README.md
_migrate/atl-chat/infra/: AGENTS.md  README.md
_migrate/atl-chat/infra/compose/: bridge.yaml  cert-manager.yaml  fluux-messenger.yaml  irc.yaml  networks.yaml  obsidianirc.yaml  thelounge.yaml  xmpp.yaml
_migrate/atl-chat/infra/nginx/: prosody-https.conf.template
_migrate/atl-chat/infra/turn-standalone/: compose.yaml  turnserver.conf.example
_migrate/atl-chat/scripts/: AGENTS.md  download_references.py  gencloak-update-env.sh  prepare-config.sh
_migrate/atl-chat/scripts/cert-manager/: run.sh
_migrate/atl-chat/tests/: README.md  __init__.py  conftest.py
_migrate/atl-chat/tests/controllers/: __init__.py  base_controllers.py
_migrate/atl-chat/tests/e2e/: test_e2e_workflow.py
_migrate/atl-chat/tests/fixtures/: docker_fixtures.py  irc_test_data.py
_migrate/atl-chat/tests/integration/: test_clients.py  test_infrastructure.py  test_irc_functionality.py  test_monitoring.py  test_performance.py  test_protocol.py  test_services.py
_migrate/atl-chat/tests/irc_utils/: __init__.py  message_parser.py
_migrate/atl-chat/tests/legacy/: README.md
_migrate/atl-chat/tests/protocol/: test_messages.py
_migrate/atl-chat/tests/unit/: __init__.py  test_bridge_compose_env_coverage.py  test_configuration.py  test_docker_client.py  test_environment_validation.py  test_irc_server_mock.py
_migrate/atl-chat/tests/utils/: base_test_cases.py  irc_test_client.py  specifications.py  test_helpers.py
apps/bridge/: AGENTS.md  README.md  TODO.md  config.example.yaml  config.template.yaml  pyproject.toml
apps/bridge/docs/: xmpp-muc-nick-findings.md
apps/bridge/src/: AGENTS.md
apps/bridge/src/bridge/: AGENTS.md  __main__.py  errors.py
apps/bridge/tests/: AGENTS.md  harness.py
apps/bridge/tests/integration/: test_echo_suppression_integration.py
apps/bridge/tests/offensive/: test_injection.py  test_overflow.py  test_race_conditions.py  test_unicode_edge.py
apps/bridge/tests/property/: test_adapter_isolation_properties.py  test_config_roundtrip_properties.py  test_content_filter_properties.py  test_discord_event_filter_properties.py  test_edit_suffix_properties.py  test_formatting_roundtrip.py  test_irc_casefold_properties.py  test_irc_spoiler_detection_properties.py  test_nick_sanitization_properties.py  test_parse_emit_parse.py  test_pipeline_shortcircuit_properties.py  test_property_based.py  test_remote_nick_format_properties.py  test_router_bijectivity_properties.py  test_same_protocol_identity.py  test_splitter_properties.py  test_spoiler_roundtrip_properties.py  test_ttl_map_properties.py  test_url_preservation.py  test_webhook_username_properties.py  test_xml_strip_properties.py  test_xmpp_reaction_model_properties.py
(+1824 files in other folders)
